--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@angular/cli": "18.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "^4.22.1",
